# godas

./: .gitignore  .gitmodules  README.md  soca_3dvar_staticpert_hybrid.yaml  soca_setcorscales.yaml
adt/: convert_iodav2_adt.sh  convert_iodav2_adt_gaea.sh  source.adt.nesdis.sh
expconfigs/: exp.config-0.25  exp.config-1.0
fix/: README.md
fnmoc/: convert_iodav2_fnmoc.sh  create_FNMOC_soca.sh  source_fnmoc.sh
jobs/: .gitignore  JJOB_COPY_ENSEMBLE  JJOB_DA_3DENVAR  JJOB_DA_3DVAR  JJOB_DA_LETKF  JJOB_DA_PREP  JJOB_FCST_PREP  JJOB_FORECAST  JJOB_GEN_ENSEMBLE  JJOB_HOFX  JJOB_HOFX_PREP  JJOB_HOFX_PREP_ENS  JJOB_LETKF  JJOB_LETKF_PREP  JJOB_LETKF_PREP_ENS  JJOB_LETKF_RECEN  JJOB_OBS_PREP  JJOB_POST  JJOB_POST_GEN_ENSEMBLE  JJOB_PREP_3DVAR  JJOB_PREP_GEN_ENSEMBLE  JJOB_PREP_LETKF  JJOB_PREP_SOCA
mjh_sanity/: Readme_sc  godas_obssanitycheck.py
modulefiles/: godas.fcst  godas.main  godas.python  hera.anaconda  hera.fcst  hera.intel18  hera.intel19  hera.setenv  orion.anaconda  orion.fcst  orion.intel19  orion.setenv
monitoring/: README.md  Readme.md  bkg.yaml  check_plots.sh  godas_plotobs.py  godas_plotobs.sh  godas_plotobs_0.sh  incr.yaml  interpolate_giomas_monthly.py  interpolate_icethickness_monthly.py  interpolate_kdtree.py  interpolate_piomas_monthly.py  job_card_godasplot.sh  job_card_socaplot.sh  plot_script.sh  plot_ts_vol_giomas.py  plot_ts_vol_giomas_interp.py  (+5 more)
obsproc/dbtools/: CMakeLists.txt  README.md
obsproc/dbtools/src/: CMakeLists.txt  godas_store_obs.py  godas_superob.py  godas_superob.sbatch
obsproc/dbtools/test/: CMakeLists.txt  test.sh
(+283 files in other folders)
